changed description and appakin text and added nofollow to appstore links

--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
 	<meta name="language" content="english">
-    <meta name="description" content="A better way to find iPhone and iPad apps that are relevant to you. Search across hundreds of categories and get results that help you.">
+    <meta name="description" content="A better way to find iPhone and iPad apps. Search for apps across hundreds of categories and get results simply organized and presented in a clean, clutter-free way.">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <base href="/">
 
-	<title data-ng-bind="pageTitle.pageTitle">appAkin - Search for iPhone and iPad apps</title>
+	<title data-ng-bind="pageTitle.pageTitle">AppAkin - Search for iPhone and iPad apps</title>
 
 	<!-- TODO: add Open Graph meta tags, and possibly Twitter and Google+ too. -->
 
@@ -42,7 +42,7 @@
     </div>
     <![endif]-->
 
-    <img class="logo-for-pinterest" src="/images/touch-icon-ipad-retina.png" alt="appAkin">
+    <img class="logo-for-pinterest" src="/images/touch-icon-ipad-retina.png" alt="AppAkin">
 
     <header data-akin-header id="header"></header>
     <main>
