added exclamation mark

--- a/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
+++ b/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
@@ -23,7 +23,7 @@
                 Try the
                 <a class="underline-on-hover"
                    href="{{::url.createSearchUrl(searchResults.resultSearchTerm, 'app', search.platform)}}">App Results</a>
-                page.
+                page!
             </span>
         </p>
         <div class="valid-results-wrapper" ng-if="::searchResults.items && searchResults.items.length > 0">
