various enhancements including cat_id on going to app page, google analytics and gui tweaks

--- a/src/web.public/public/scripts/appakin/pages/about/about.html
+++ b/src/web.public/public/scripts/appakin/pages/about/about.html
@@ -29,7 +29,7 @@
             <img src="/images/about-to-come.svg">
             <p>
                 We think we offer an excellent app search experience, but we have big ideas
-                for how we can make it even better. Watch this space&mdash;thing&apos;s
+                for how we can make it even better. Watch this space&mdash;things
                 are going to get interesting!
             </p>
         </div>
