--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -22,6 +22,15 @@
     <link rel="apple-touch-icon" sizes="76x76" href="/images/touch-icon-ipad.png">
     <link rel="apple-touch-icon" sizes="120x120" href="/images/touch-icon-iphone-retina.png">
     <link rel="apple-touch-icon" sizes="152x152" href="/images/touch-icon-ipad-retina.png">
+
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-56125621-1', 'auto');
+    </script>
 </head>
 <body window-width>
     <!--[if lte IE 8]>
