got rid of platform selection dropdown

--- a/src/web.public/public/scripts/appakin/search/akin-searchbox.html
+++ b/src/web.public/public/scripts/appakin/search/akin-searchbox.html
@@ -9,10 +9,16 @@
                 on-select="submitSearch"
                 is-active="search.autoComplete.active"></search-input>
         </div>
-        <div class="platform-menu btn-group" dropdown is-open="status.isOpen">
-            <button type="button" class="btn-menu">
-                {{platform.getStoreName('ios')}}
-            </button>
+        <div class="platform-menu">
+            <ul class="social-media-links">
+                <li><a href="https://www.facebook.com/pages/AppAkin/1468571630089537" class="facebook never-underline" target="_blank"></a></li>
+                <li><a href="https://twitter.com/appakin" class="twitter never-underline" target="_blank"></a></li>
+            </ul>
         </div>
+        <!--<div class="platform-menu btn-group" dropdown is-open="status.isOpen">-->
+            <!--<button type="button" class="btn-menu">-->
+                <!--{{platform.getStoreName('ios')}}-->
+            <!--</button>-->
+        <!--</div>-->
     </form>
 </div>
