--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -29,7 +29,8 @@
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-        ga('create', 'UA-56125621-1', 'auto');
+        ga('create', 'UA-56125621-1', { 'cookieDomain': 'none' });
+        ga('set', 'location', 'http://www.appakin.com/');
     </script>
 </head>
 <body window-width>
