added instrucitions to home page

--- a/src/web.public/public/scripts/appakin/pages/home/home.html
+++ b/src/web.public/public/scripts/appakin/pages/home/home.html
@@ -14,4 +14,39 @@
         <!--</div>-->
     <!--</div>-->
     <div id="searchbox-home" akin-searchbox-home></div>
+    <ul class="instructions">
+        <li class="instruction">
+            <div class="img-wrapper">
+                <div class="img one"></div>
+            </div>
+            <div class="flourish"></div>
+            <p>
+                A <span>faster way</span> to get the results you want,
+                displayed in an <span>easy-to-read</span> manner.
+            </p>
+            <div class="flourish"></div>
+        </li>
+        <li class="instruction">
+            <div class="img-wrapper">
+                <div class="img two"></div>
+            </div>
+            <div class="flourish"></div>
+            <p>
+                View results <span>grouped by category</span>. Click on apps,
+                or drill into hundreds of <span>category charts</span>.
+            </p>
+            <div class="flourish"></div>
+        </li>
+        <li class="instruction">
+            <div class="img-wrapper">
+                <div class="img three"></div>
+            </div>
+            <div class="flourish"></div>
+            <p>
+                <span>Search</span> for your favorite apps,
+                then <span>browse</span> their categories for similar apps.
+            </p>
+            <div class="flourish"></div>
+        </li>
+    </ul>
 </div>
