--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
 	<meta name="language" content="english">
-    <meta name="description" content="A better way to find iPhone and iPad apps. Search for apps across hundreds of categories and get results simply organized and presented in a clean, clutter-free way.">
+    <meta name="description" content="The best way to find iPhone and iPad apps. Search for apps across hundreds of categories and get results simply organized and presented in a clean, clutter-free way.">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <base href="/">
 
