more home page instruction tweaks

--- a/src/web.public/public/scripts/appakin/pages/home/home.html
+++ b/src/web.public/public/scripts/appakin/pages/home/home.html
@@ -21,7 +21,7 @@
             </div>
             <div class="flourish"></div>
             <p>
-                A <span>faster way</span> to get the results you want,
+                The <span>faster way</span> to get the results you want,
                 displayed in an <span>easy-to-read</span> manner.
             </p>
             <div class="flourish"></div>
