tweak to home page instructions on mobile

--- a/src/web.public/public/scripts/appakin/pages/home/home.html
+++ b/src/web.public/public/scripts/appakin/pages/home/home.html
@@ -37,7 +37,7 @@
             </p>
             <div class="flourish"></div>
         </li>
-        <li class="instruction">
+        <li class="instruction last">
             <div class="img-wrapper">
                 <div class="img three"></div>
             </div>
