fixed social links rendering problem on about page

--- a/src/web.public/public/scripts/appakin/pages/home/home.html
+++ b/src/web.public/public/scripts/appakin/pages/home/home.html
@@ -1,5 +1,5 @@
 <div id="home-page" ng-class="{ extended: autocompleteFocused }">
-    <img class="akin-logo" alt="AppAkin" src="/images/appakin-logo-dark-home-page.svg">
+    <img class="akin-logo" alt="AppAkin - App search that works" src="/images/appakin-logo-dark-home-page.svg">
     <!--<div class="platform-static">-->
         <!--<div class="platform-img-wrapper android">-->
             <!--<img class="platform-img" src="/images/google-play.svg">-->
