--- a/src/web.public/public/scripts/appakin/pages/app/app.html
+++ b/src/web.public/public/scripts/appakin/pages/app/app.html
@@ -1,7 +1,7 @@
 <div id="app" class="main-wrapper" ng-cloak>
     <p class="error" ng-if="::appData.serverError">
-        <span class="icon"></span>There was a problem getting the app details.
-        Please try refreshing the page, or if the problem persists please try later.
+        <span class="icon"></span>A problem occurred when getting the app details.
+        Please try <a href ng-click="::route.reload()">refreshing this page</a>, or if the problem persists please try later.
     </p>
     <div class="no-error-wrapper" ng-if="::!appData.serverError">
         <h1 ng-bind="::appData.name"></h1>
