--- a/src/web.public/public/scripts/appakin/pages/admin/search-seed.html
+++ b/src/web.public/public/scripts/appakin/pages/admin/search-seed.html
@@ -1,7 +1,9 @@
 <div id="search-seed" class="main-wrapper" ng-cloak>
     <form ng-submit="submitForm()">
-        <input type="number" ng-model="classifiedApps.seedCategoryId" name="seedCategoryId" min="1" max="99999999">
+        Seed Category ID:<input type="number" ng-model="classifiedApps.seedCategoryId" name="seedCategoryId" min="1" max="99999999">
         Boost:<input type="number" ng-model="classifiedApps.boost" name="boost" min="1" max="10">
+        Skip:<input type="number" ng-model="skip" name="skip" min="0" max="99999999">
+        Take:<input type="number" ng-model="take" name="take" min="1" max="99999999">
         <input type="submit" value="Submit">
     </form>
     <div class="search-seed-apps-list-wrapper">
@@ -12,11 +14,11 @@
                 <p class="id">{{::searchSeedApp.extId}}</p>
                 <p class="description">{{::searchSeedApp.desc}}</p>
                 <p class="genres"><em>Genres:</em> <span ng-repeat="genre in searchSeedApp.genres track by $index">{{genre}}, </span></p>
-                <div ng-if="::searchSeedApp.screenshotUrls.length > 0" class="screenshots-wrapper">
-                    <img ng-repeat="screenshotUrl in ::searchSeedApp.screenshotUrls track by $index" src="{{screenshotUrl}}">
+                <div ng-if="::searchSeedApp.screenShots.length > 0" class="screenshots-wrapper">
+                    <img ng-repeat="screenshotUrl in ::searchSeedApp.screenShots track by $index" src="{{screenshotUrl}}">
                 </div>
-                <div ng-if="::searchSeedApp.screenshotUrls.length === 0" class="screenshots-wrapper">
-                    <img ng-repeat="screenshotUrl in ::searchSeedApp.ipadScreenshotUrls track by $index" src="{{screenshotUrl}}">
+                <div ng-if="::searchSeedApp.screenShots.length === 0" class="screenshots-wrapper">
+                    <img ng-repeat="screenshotUrl in ::searchSeedApp.ipadScreenShots track by $index" src="{{screenshotUrl}}">
                 </div>
                 <p class="actions">
                     <button ng-if="!searchSeedApp.updated" ng-click="::updateTrainingData(searchSeedApp.extId, classifiedApps.seedCategoryId, true, searchSeedApp)">Include</button>
