updated admin pages

--- a/src/web.public/public/scripts/appakin/pages/admin/classified-apps.html
+++ b/src/web.public/public/scripts/appakin/pages/admin/classified-apps.html
@@ -6,6 +6,7 @@
         Take:<input type="number" ng-model="take" name="take" min="1" max="99999999">
         <input type="submit" value="Submit">
     </form>
+    <a href="/search-seed">Search Seed</a>
     <div class="classified-apps-list-wrapper">
         <ul class="classified-apps-list">
             <li ng-repeat="classifiedApp in classifiedAppsData track by classifiedApp.extId" class="classified-app">
