--- a/src/web.public/public/scripts/appakin/pages/admin/classified-apps.html
+++ b/src/web.public/public/scripts/appakin/pages/admin/classified-apps.html
@@ -2,11 +2,12 @@
     <form ng-submit="submitForm()">
         Seed Category ID:<input type="number" ng-model="classifiedApps.seedCategoryId" name="seedCategoryId" min="1" max="99999999">
         <input type="checkbox" ng-model="classifiedApps.include" name="include" value="true">Include
-        Skip:<input type="number" ng-model="skip" name="skip" min="0" max="99999999">
-        Take:<input type="number" ng-model="take" name="take" min="1" max="99999999">
+        Skip:<input type="number" ng-model="classifiedApps.skip" name="skip" min="0" max="99999999">
+        Take:<input type="number" ng-model="classifiedApps.take" name="take" min="1" max="99999999">
         <input type="submit" value="Submit">
     </form>
     <a href="/search-seed">Search Seed</a>
+    <button ng-click="classify()">Classify</button>
     <div class="classified-apps-list-wrapper">
         <ul class="classified-apps-list">
             <li ng-repeat="classifiedApp in classifiedAppsData track by classifiedApp.extId" class="classified-app">
@@ -23,7 +24,9 @@
                 </div>
                 <p class="actions">
                     <button ng-if="!classifiedApps.include && !classifiedApp.updated" ng-click="::updateTrainingData(classifiedApp.extId, classifiedApps.seedCategoryId, true, classifiedApp)">Include</button>
+                    <span ng-if="classifiedApps.include && classifiedApp.updated">Excluded</span>
                     <button ng-if="classifiedApps.include && !classifiedApp.updated" ng-click="::updateTrainingData(classifiedApp.extId, classifiedApps.seedCategoryId, false, classifiedApp)">Exclude</button>
+                    <span ng-if="!classifiedApps.include && classifiedApp.updated">Included</span>
                 </p>
             </li>
         </ul>
