--- a/src/web.public/public/scripts/appakin/pages/admin/search-seed.html
+++ b/src/web.public/public/scripts/appakin/pages/admin/search-seed.html
@@ -2,11 +2,12 @@
     <form ng-submit="submitForm()">
         Seed Category ID:<input type="number" ng-model="classifiedApps.seedCategoryId" name="seedCategoryId" min="1" max="99999999">
         Boost:<input type="number" ng-model="classifiedApps.boost" name="boost" min="1" max="10">
-        Skip:<input type="number" ng-model="skip" name="skip" min="0" max="99999999">
-        Take:<input type="number" ng-model="take" name="take" min="1" max="99999999">
+        Skip:<input type="number" ng-model="classifiedApps.skip" name="skip" min="0" max="99999999">
+        Take:<input type="number" ng-model="classifiedApps.take" name="take" min="1" max="99999999">
         <input type="submit" value="Submit">
     </form>
     <a href="/classified-apps">Classified Apps</a>
+    <button ng-click="classify()">Classify</button>
     <div class="search-seed-apps-list-wrapper">
         <p>Total apps: <span ng-bind="searchSeedAppsData.total"></span></p>
         <ul class="search-seed-apps-list">
